[project]
name = "langchain-helloworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.86.0",
    "black>=26.3.1",
    "dotenv>=0.9.9",
    "isort>=8.0.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "prettier>=0.0.7",
    "ruff>=0.15.7",
]
